Changes by chris, tiy, steve25 & coffe - implements new tests